--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,8 +4,8 @@ repo: UptimeDropit # Your Github repository name
 
 # Add your sites here
 sites:
-  - name: Google
-    url: https://www.drop-it.com.ar
+  - name: Pickit
+    url: https://www.pickit.com.ar
     
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
