--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,8 +4,18 @@ repo: UptimeDropit # Your Github repository name
 
 # Add your sites here
 sites:
-  - name: Pickit
+  - name: Pickit Argentina  
     url: https://www.pickit.com.ar
+  - name: Pickit Colombia
+    url: https://www.pickit.com.co
+  - name: Pickit México
+    url: https://www.pickit.com.mx
+  - name: Pickit Uruguay 
+    url: https://www.pickit.com.uy
+  - name: Pickit Chile
+    url: https://www.pickit.cl
+  - name: Pickit Jira
+    url: http://support.pickit.net
     
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
