--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,6 +14,8 @@ sites:
     url: https://www.pickit.com.uy
   - name: Pickit Jira
     url: http://support.pickit.net
+  - name: Pickit Odoo
+    url: https://odoo.pickit.net
     
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
